# nemea-modules-ng

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clickhouse_init  flake.nix
.github/actions/install-dependencies/: action.yml
.github/workflows/: check.yml  ci.yml  copr.yml  rpm-install.yml  test.yml  tests.yml  upload.yml
cmake/: build_type.cmake  dependencies.cmake  installation.cmake  tests.cmake
cmake/modules/: FindUNIREC.cmake
common/: CMakeLists.txt
common/include/: logger.hpp
common/include/factory/: pluginFactory.hpp  pluginFactoryRegistrator.hpp
common/include/telemetry/: content.hpp  directory.hpp  file.hpp  holder.hpp  node.hpp
common/src/: logger.cpp
common/src/telemetry/: content.cpp  directory.cpp  file.cpp  holder.cpp  node.cpp
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in
modules/: CMakeLists.txt
modules/adsnormalizer/src/: CMakeLists.txt  adsnormalizer.cpp  adsnormalizer.hpp  main.cpp
modules/clickhouse/: README.md
modules/clickhouse/src/: CMakeLists.txt  clickhouse.hpp  config.cpp  config.hpp  datatype.cpp  datatype.hpp  inserter.cpp  inserter.hpp  logger.hpp  main.cpp  manager.cpp  manager.hpp  manager_temp.cpp  rapidxml.hpp  rapidxml_print.hpp  syncqueue.hpp  syncstack.hpp
modules/cmake/: build_type.cmake
modules/deduplicator/: README.md
modules/deduplicator/src/: CMakeLists.txt  deduplicator.cpp  deduplicator.hpp  flowKey.hpp  hashtable.cpp  hashtable.hpp  main.cpp  spinlock.cpp  spinlock.hpp  tablerecord.cpp  tablerecord.hpp  timeoutBucket.hpp  timeoutHashMap.hpp  unirecidstorage.hpp
modules/deduplicator/tests/: test.sh
modules/deduplicator/tests/testsData/inputs/: input1.csv
modules/deduplicator/tests/testsData/results/: res1.csv
modules/fieldClassifier/: README.md
modules/fieldClassifier/src/: CMakeLists.txt  LRUCache.hpp  SNItoCVS.py  asn.cpp  asn.hpp  common.hpp  debug.hpp  emptyFields.hpp  fieldClassifier.cpp  fieldClassifier.hpp  fieldProcessor.cpp  fieldProcessor.hpp  geolite.cpp  geolite.hpp  ipClassifier.cpp  ipClassifier.hpp  main.cpp  plugin.hpp  sniClassifier.cpp  sniClassifier.hpp  templateCreator.cpp  templateCreator.hpp
modules/fieldClassifier/src/plugins/: asn.cpp  asn.hpp  geolite.cpp  geolite.hpp  ipClassifier.cpp  ipClassifier.hpp  listOfAllPlugins.hpp  plugin.cpp  plugin.hpp  sniClassifier.cpp  sniClassifier.hpp
modules/fieldClassifier/src/tools/: SNItoCVS.py  getFiles.sh
modules/fieldClassifier/tools/: SNItoCVS.py  getFiles.sh
modules/flowScatter/: README.md
modules/flowScatter/src/: CMakeLists.txt  flowScatter.cpp  flowScatter.hpp  main.cpp
modules/geolite/: README.md
modules/geolite/src/: CMakeLists.txt  SNItoCVS.py  commandLineParams.hpp  emptyFields.hpp  fieldProcessor.cpp  fieldProcessor.hpp  geolite.cpp  geolite.hpp  main.cpp  sni.cpp  sni.hpp  templateCreator.cpp  templateCreator.hpp
modules/listDetector/: README.md
modules/listDetector/src/: CMakeLists.txt  configParser.cpp  configParser.hpp  configReloader.cpp  configReloader.hpp  csvConfigParser.cpp  csvConfigParser.hpp  fieldMatcher.hpp  fieldsMatcher.cpp  fieldsMatcher.hpp  ipAddressFieldMatcher.cpp  ipAddressFieldMatcher.hpp  ipAddressMatcher.cpp  ipAddressMatcher.hpp  ipAddressPrefix.cpp  ipAddressPrefix.hpp  ipPrefixMatcher.hpp  listDetector.cpp  listDetector.hpp  main.cpp  numericMatcher.hpp  octetNode.hpp  patriciaTrie.hpp  patriciaTrie6.hpp  rule.cpp  rule.hpp  ruleBuilder.cpp  ruleBuilder.hpp  rulesMatcher.cpp  rulesMatcher.hpp  staticFieldsHasher.cpp  staticFieldsHasher.hpp  stringMatcher.hpp
modules/listDetector/tests/: test.sh
modules/listDetector/tests/testsData/inputs/: input23.csv  input24.csv  input25.csv  input26.csv  input27.csv  input28.csv  input29.csv
modules/listDetector/tests/testsData/results/: res23.csv  res24.csv  res25.csv  res26.csv  res27.csv  res28.csv  res29.csv
modules/listDetector/tests/testsData/rules/: rule23.csv  rule24.csv  rule25.csv  rule26.csv  rule27.csv  rule28.csv  rule29.csv
modules/my_logger/src/: CMakeLists.txt  main.cpp
modules/sampler/src/: main.cpp  sampler.cpp  sampler.hpp
modules/telemetry/: README.md
modules/telemetry/src/: CMakeLists.txt  appfs-plugin.cpp  cursesPrint.cpp  cursesPrint.hpp  main.cpp  ncurses-stdout-plugin.cpp  ncurses-wrapper.cpp  outputPlugin.hpp  timer.cpp  timer.hpp
modules/whitelist/: CMakeLists.txt  Makefile  README.md  configParser.cpp  configParser.hpp  csvConfigParser.cpp  csvConfigParser.hpp
modules/whitelist/src/: CMakeLists.txt  configParser.cpp  csvConfigParser.cpp  ipAddressPrefix.cpp  main.cpp  whitelist.cpp  whitelist.hpp  whitelistRule.cpp  whitelistRule.hpp  whitelistRuleBuilder.cpp  whitelistRuleBuilder.hpp
pkg/rpm/: nemea-modules-ng.spec.in
